--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
 }
 
+/* header styling */
 .header {
     display: flex;
     justify-content: space-between;
@@ -32,12 +33,13 @@ body {
     font-size: 18px;
     text-decoration: none;
 }
-
+/* hero styling */
 .hero {
     display: flex;
+	justify-content: center;
     align-items: center;
     background-color: #1f2937;
-    padding: 50px 256px;
+    padding: 70px 256px;
 }
 
 .content {
@@ -46,7 +48,7 @@ body {
 
 #main-text {
     color: #f9faf8;
-    font-weight: extra-bold;
+    font-weight: 900;
     font-size: 48px;
     margin-bottom: 12px;
 }
@@ -54,22 +56,140 @@ body {
 .content > div {
     height: 250px;
     flex: 1;
-    min-width: 220px;
+    min-width: 250px;
+	margin-right: 30px;
 }
 
 .content > img {
     height: 250px;
     flex: 1;
+	background-color: #e5e7eb
    
 }
 
 button {
     font-size: 18px;
     padding: 6px 32px;
+	margin-top: 12px;
+	border-radius: 8px;
 }
 
 .non-inv {
     background-color: #3882f6;
     color: white;
+	border: none;
+}
+
+/* info styling */
+
+.info {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 20px 256px;
+}
+
+.info-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 60px;
+}
+
+.image-block {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 	
+.image-block > img {
+	min-height: 140px;
+	min-width: 140px;
+	border: 4px solid #3882f6;
+	border-radius: 16px;
+	flex: 1;
+}
+
+.image-block > div {
+	width: 160px;
+	text-align: center;
+}
+
+.info > h2 {
+	font-size: 36px;
+	font-weight: 900;
+	color: #1f2937;
+	margin-bottom: 50px;
+	flex-shrink: 0;
+}
+
+/* quote styling */
+.quote {
+	background-color: #e5e7eb;
+	padding: 80px 256px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.text-quote {
+	font-size: 36px;
+	font-style: italic;
+	font-weight: 300;
+	color: #1f2937;
+	width: 800px;
+}
+
+.name-quote {
+	flex: 1;
+	font-size: 28px;
+	font-weight: 900;
+	text-align: end;
+}
+
+/* lower styling */
+.lower {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 70px 256px;
+}
+
+.lower-box {
+	background-color: #3882f6;
+	padding: 30px 150px;
+	border-radius: 8px;
+	display: flex;
+	justify-content: space-between;
+	gap: 50px;
+	flex-shrink: 0;
+}
+
+.lower-text-big {
+	color: #e5e7eb;
+    font-size: 24px;
+	font-weight: bold;
+}
+
+.lower-text-small {
+	color: #e5e7eb;
+    font-size: 18px;
+}
+
+.inv {
+	background-color: #3882f6;
+    color: white;
+	border: 3px solid white;
+}
+
+/* footer styling */
+
+.footer {
+	color: white;
+	font-size: 18px;
+	background-color: #1f2937;
+	text-align: center;
+	padding: 20px 0;
+}
